--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -43,7 +43,8 @@ a {
   color: inherit;
   text-decoration: none;
   background-color: transparent;
-  border-bottom: 2px solid rgba(0,0,0,0);
+  border-bottom: 1px solid rgba(0,0,0,0.3);
+  line-height: 18px;
   -webkit-text-decoration-skip: objects;
 }
 a:active,
@@ -619,4 +620,33 @@ time {
 }
 ::selection {
   background: #ffb7b7; /* WebKit/Blink Browsers */
+}
+hr {
+  /* font-family: medium-content-slab-serif-font,Georgia,Cambria,"Times New Roman",Times,serif; */
+  font-weight: 400;
+  font-style: italic;
+  font-size: 30px;
+  letter-spacing: .6em;
+  border: none;
+  background: none;
+  margin: 45px auto;
+  width: 100%;
+}
+hr::before {
+  content: '...';
+  display: inline-block;
+  /* margin-left: .6em; */
+  margin: 20px auto;
+  width: 100%;
+  text-align: center;
+  color: rgba(0,0,0,.68);
+  position: relative;
+  top: -42px;
+}
+iframe {
+  border: none;
+}
+.gatsby-resp-image-link {
+  margin-bottom: 40px;
+  border: none;
 }
