--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -6,3 +6,20 @@ $phone: 415px;
 $headerHeightsDesktop: 400px;
 $headerHeightsTablet: 300px;
 $headerHeightsPhone: 160px;
+
+$SERIF: "sofia-pro", Source Serif Pro, Georgia, serif;
+$SANS_SERIF: -apple-system, BlinkMacSystemFont, Lato, Droid Sans, Helvetica Neue, sans-serif;
+$MONOSPACE: SFMono-Regular,Consolas,Roboto Mono,Droid Sans Mono,Liberation Mono,Menlo,Courier,monospace;
+
+$HEADER_HEIGHT: 60px;
+$HEADER_BORDER: 3px;
+
+$PINK: #ffb7b7;
+$GREEN: #1c9963;
+$LIGHT_GRAY: rgba(100, 100, 100, 0.2);
+$YELLOW: #fff329b3;
+// $BLUE: #100382bd;
+// $LIGHT_BLUE: $BLUE;
+$ORIGINAL_BLUE: rgba(45, 67, 104, 0.95);
+$DARK_BLUE: desaturate(darken($ORIGINAL_BLUE, 10%), 10%);
+// $DARK_BLUE: Color("rgba(45,67,104,0.95)").darken(0.1).desaturate(0.1).string();
