--- a/src/templates/blog-post/simple/styles.module.scss
+++ b/src/templates/blog-post/simple/styles.module.scss
@@ -63,3 +63,164 @@
     position: relative;
   }
 }
+
+.content {
+  width: 100%;
+  max-width: 780px;
+  box-sizing: border-box;
+  position: relative;
+  word-break: break-word;
+
+  @media print {
+    max-width: none;
+  }
+
+  @media screen and (max-width: $tablet) {
+    padding: 0 20px;
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  .right {
+    float: right;
+    margin: 0 0 20px 20px;
+  }
+
+  span {
+    &.figcaption,
+    &.figcaption_hack {
+      text-align: center;
+      font-size: 14px;
+      font-family: $SANS_SERIF;
+      display: block;
+      margin-top: -30px;
+      margin-bottom: 40px;
+      opacity: 0.9;
+    }
+  }
+
+  .gatsby-image-outer-wrapper {
+    width: 100%;
+    background: blue;
+    height: 200px;
+  }
+
+  @media screen and (max-width: $tablet) {
+    blockquote {
+      border-left: none;
+      font-size: 1.4rem;
+    }
+
+    h1 {
+      font-size: 3.4rem;
+    }
+
+    h2 {
+      font-size: 2.4rem;
+    }
+
+    pre {
+      font-size: 1.4rem;
+    }
+  }
+}
+
+.title {
+  margin: 0;
+  position: relative;
+  height: $headerHeightsDesktop;
+  display: flex;
+  align-items: flex-end;
+
+  @media screen and (max-width: $tablet) {
+    height: $headerHeightsTablet;
+    padding: 0 20px;
+  }
+
+  @media screen and (max-width: $phone) {
+    height: auto;
+    padding: 0;
+  }
+
+  @media print {
+    height: auto;
+    width: 100%;
+  }
+
+}
+
+.inner {
+  $START: 15%;
+  $END: 95%;
+  $TRANSPARENT_WHITE: rgba(255, 255, 255, 0.65);
+
+  margin: 0 auto -25px auto;
+  width: 780px;
+  max-width: 100%;
+
+  @media screen and (max-width: $tablet) {
+    padding: 0 20px;
+    width: 100%;
+  }
+
+  @media print {
+    margin: 0;
+    height: auto;
+    width: 100%;
+    padding: 0;
+
+    h1,
+    time {
+      margin: 0;
+      width: 100%;
+    }
+  }
+
+  time {
+    display: block;
+    color: rgba(0, 0, 0, 0.4);
+    background: $TRANSPARENT_WHITE;
+    font-size: 1.2rem;
+  }
+
+  h1 {
+    margin: 0 0 20px 0;
+
+    span {
+      background-image: linear-gradient(to bottom, transparent, transparent $START, $TRANSPARENT_WHITE $START, $TRANSPARENT_WHITE $END, transparent $END, transparent);
+    }
+
+    @media screen and (max-width: $phone) {
+      font-size: 3.6rem;
+      line-height: 3.6rem;
+      margin: 10px 0 10px 0;
+
+      span {
+        background-image: none;
+      }
+    }
+  }
+
+  @media screen and (max-width: $tablet) {
+    font-size: 3rem;
+    margin: 0 0 5px 0;
+  }
+}
+
+.container {
+  display: flex;
+  max-width: 100%;
+  overflow-x: hidden;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+
+  p {
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+}
