--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -19,7 +19,8 @@ $GREEN: #1c9963;
 $LIGHT_GRAY: rgba(100, 100, 100, 0.2);
 $YELLOW: #fff329b3;
 // $BLUE: #100382bd;
-// $LIGHT_BLUE: $BLUE;
+$BLUE: rgba(16, 3, 130, 0.74);
+$LIGHT_BLUE: $BLUE;
 $ORIGINAL_BLUE: rgba(45, 67, 104, 0.95);
 $DARK_BLUE: desaturate(darken($ORIGINAL_BLUE, 10%), 10%);
 // $DARK_BLUE: Color("rgba(45,67,104,0.95)").darken(0.1).desaturate(0.1).string();
