--- a/src/templates/blog-post/grid/styles.module.scss
+++ b/src/templates/blog-post/grid/styles.module.scss
@@ -1,3 +1,154 @@
+@import "~styles/constants";
+
+.content {
+  max-width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  display: grid;
+  justify-items: stretch;
+  grid-column-gap: 20px;
+  grid-template-columns: [page-start] repeat(3, 60px) [text-start] repeat(10, 60px) [text-end] repeat(3, 60px) [page-end];
+
+  @media (max-width: 1200px) {
+    grid-template-columns: [page-start] repeat(2, 60px) [text-start] repeat(9, 60px) [text-end] repeat(2, 60px) [page-end];
+  }
+
+  @media (max-width: 1100px) {
+    display: block;
+    padding: 0 20px;
+  }
+
+  > * {
+    grid-column: text;
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  figcaption,
+  aside {
+    color: rgba(0, 0, 0, 0.4);
+    grid-row-end: 9999999;
+
+    .caption {
+      text-align: left;
+      margin: 0 0 5px 0;
+
+      a {
+        border: none;
+      }
+    }
+
+    grid-column-start: text-end;
+    grid-column-end: page-end;
+
+    @media (max-width: 1100px) {
+      position: relative;
+      grid-column: text;
+      margin: 20px 0 40px 0;
+
+      .caption {
+        text-align: center;
+      }
+    }
+
+    &.left {
+      grid-column-start: page-start;
+      grid-column-end: text-start;
+
+      @media (max-width: 860px) {
+        grid-column: text;
+      }
+    }
+  }
+
+  aside {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 1.4rem;
+    line-height: 1.7;
+    box-sizing: border-box;
+    transition-duration: 0.2s;
+
+    * {
+      transition-duration: 0.2s;
+    }
+
+    p {
+      font-size: inherit;
+      line-height: inherit;
+    }
+
+    strong {
+      color: rgba(0, 0, 0, 0.5);
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: rgba(0, 0, 0, 0.4);
+    }
+
+    @media (max-width: 1100px) {
+      max-width: 700px;
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+      background-color: rgba(0, 0, 0, 0.025);
+      border-radius: 5px;
+      padding: 10px;
+    }
+  }
+
+  .name {
+    border-radius: 3px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0 5px;
+    display: inline-block;
+    line-height: 25px;
+  }
+
+  blockquote,
+  em,
+  .caption,
+  aside {
+    .name {
+      border: none;
+      background: none;
+      padding: 0;
+    }
+  }
+
+  .right {
+    float: right;
+    margin: 0 0 20px 20px;
+  }
+
+  span {
+    &.figcaption,
+    &.figcaption_hack {
+      text-align: center;
+      font-size: 14px;
+      font-family: $SANS_SERIF;
+      display: block;
+      margin-top: -30px;
+      margin-bottom: 40px;
+      opacity: 0.9;
+    }
+  }
+
+  .gatsby-image-outer-wrapper {
+    width: 100%;
+    background: blue;
+    height: 200px;
+  }
+
+  pre {
+    font-size: 1.8rem;
+  }
+}
+
 .container {
   display: flex;
   max-width: 100%;
@@ -6,3 +157,130 @@
   flex-direction: column;
   align-items: center;
 }
+
+.header {
+  position: relative;
+  margin: 0 0 80px 0;
+  overflow: hidden;
+  width: 120%;
+  max-height: 600px;
+  margin-top: (-1 * $HEADER_HEIGHT) + $HEADER_BORDER;
+
+  @media (max-width: 1600px) {
+    max-height: 400px;
+  }
+
+  @media (max-width: 1200px) {
+    max-height: 400px;
+  }
+
+  @media (max-width: 1000px) {
+    max-height: 360px;
+  }
+
+  @media (max-width: 860px) {
+    max-height: 240px;
+    margin-top: 0;
+  }
+
+  @media (max-width: 760px) {
+    max-height: 160px;
+    width: 100%;
+  }
+
+  span {
+    float: right;
+    margin-top: -20px;
+  }
+}
+
+.coverImg {
+  position: relative;
+}
+
+.credit {
+  font-size: 1.2rem;
+  font-family: $SANS_SERIF;
+  background: rgba(255, 255, 255, 0.4);
+  padding: 0 10px;
+  margin: 10px;
+  position: absolute;
+  color: black;
+  z-index: 1;
+  right: 200px;
+
+  @media (min-width: 1200px) {
+    bottom: 30px;
+  }
+
+  @media (max-width: 1200px) {
+    top: 0;
+  }
+
+  img {
+    width: 100%;
+    object-fit: cover;
+    transition-duration: 0.5s;
+    margin: 0;
+  }
+}
+
+.title {
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+  left: 0;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 1) 10%, rgba(255, 255, 255, 0) 100%);
+  padding: 20% 40px 0 40px;
+  bottom: 0;
+  display: grid;
+  justify-items: stretch;
+  grid-column-gap: 20px;
+  grid-template-columns: 1fr [page-start] repeat(3, 60px) [text-start] repeat(10, 60px) [text-end] repeat(3, 60px) [page-end] 1fr;
+
+  @media (max-width: 1200px) {
+    grid-template-columns: [page-start] repeat(2, 60px) [text-start] repeat(9, 60px) [text-end] repeat(2, 60px) [page-end];
+    padding-top: 25%;
+  }
+
+  @media (max-width: 1100px) {
+    grid-template-columns: [text-start] 1fr [text-end];
+    padding: 10% 20px 0 20px;
+  }
+
+  @media (max-width: 860px) {
+    display: block;
+    margin-top: 80px;
+  }
+
+  time {
+    grid-column: text;
+    font-size: 1.4rem;
+    color: rgba(0, 0, 0, 0.4);
+    margin: 0 0 20px 0;
+  }
+
+  h1 {
+    grid-column: text;
+    transition-duration: 0.5s;
+    line-height: 1.24;
+    letter-spacing: -0.015em;
+    margin: 0;
+    font-size: 4.6rem;
+    padding: 0;
+
+    @media (max-width: 1000px) {
+      font-size: 3.6rem;
+    }
+
+    @media (max-width: 860px) {
+      font-size: 3rem;
+      margin-bottom: 5px;
+    }
+
+    @media (max-width: 660px) {
+      font-size: 2.8rem;
+    }
+  }
+}
+
