Remove styled from more

--- a/src/templates/home/styles.module.scss
+++ b/src/templates/home/styles.module.scss
@@ -130,7 +130,7 @@ $SHADOW: 10px;
     }
 
     &:hover {
-      background: $BLUE;
+      background: $GRAY;
       box-shadow: $SHADOW $SHADOW 0 $BLUE;
 
       a {
