--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -17,6 +17,8 @@ $HEADER_BORDER: 3px;
 $PINK: #ffb7b7;
 $GREEN: #1c9963;
 $LIGHT_GRAY: rgba(100, 100, 100, 0.2);
+// $GRAY: #10038208;
+$GRAY: rgba(16, 3, 130, 0.03);
 $YELLOW: #fff329b3;
 // $BLUE: #100382bd;
 $BLUE: rgba(16, 3, 130, 0.74);
