Big removal of styles

--- a/src/templates/home/styles.module.scss
+++ b/src/templates/home/styles.module.scss
@@ -51,7 +51,7 @@ $PADDING: 40px;
 $SHADOW: 10px;
 
 .title {
-  margin: 0 0 80px -$PADDING;
+  margin: 20px 0 80px -$PADDING;
   font-size: 8.2rem;
   line-height: 8.2rem;
   background: $YELLOW;
