Push latest article changes

--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,11 +1,14 @@
 $giant: 1170px;
 $desktop: 992px;
-$tablet: 768px;
+$tablet: 820px;
+// $tablet: 768px;
 $phone: 415px;
 
 $headerHeightsDesktop: 400px;
 $headerHeightsTablet: 300px;
 $headerHeightsPhone: 160px;
+
+$contentWidth: 780px;
 
 $SERIF: "sofia-pro", Source Serif Pro, Georgia, serif;
 $SANS_SERIF: -apple-system, BlinkMacSystemFont, Lato, Droid Sans, Helvetica Neue, sans-serif;
