--- a/src/components/Form/styles.module.scss
+++ b/src/components/Form/styles.module.scss
@@ -1,12 +1,4 @@
-import styled from "styled-components";
-
-import {
-  LIGHT_BLUE,
-  LIGHT_GRAY,
-  media,
-} from 'layouts/constants';
-
-const Container = styled.form `
+.form {
   margin: 0 auto 0 auto;
   max-width: 100%;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
@@ -14,17 +6,17 @@ const Container = styled.form `
   background: white;
   border-radius: 5px;
   box-sizing: border-box;
-  ${media.tablet`
+
+  @media screen and (max-width: $tablet) {
     border-radius: 0;
-  `}
+  }
 
   input {
-    padding: 10px;
     font-size: 1.6rem;
     margin: 20px 0;
     padding: 10px 12px;
     height: auto;
-    color: rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.3);
     -webkit-border-radius: 3px;
@@ -38,15 +30,16 @@ const Container = styled.form `
     min-width: 0;
     min-height: 0;
     width: 300px;
-    ${media.tablet`
+
+    @media screen and (max-width: $tablet) {
       width: 100%;
-    `}
+    }
 
     &[type=submit] {
       border-radius: 10px;
       color: white;
       transition-duration: 0.2s;
-      background-color: ${LIGHT_BLUE};
+      background-color: $LIGHT_BLUE;
       border: 2px solid white;
       font-size: 15px;
       width: 140px;
@@ -57,13 +50,11 @@ const Container = styled.form `
       margin: 0;
 
       &:disabled {
-        color: ${LIGHT_GRAY};
-        border: 2px solid ${LIGHT_GRAY};
+        color: $LIGHT_GRAY;
+        border: 2px solid $LIGHT_GRAY;
         background-color: white;
         cursor: default;
       }
     }
   }
-`;
-
-export default Container;
+}
