--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,20 +1,11 @@
-import {
-  PINK,
-  SERIF,
-  SANS_SERIF,
-  HEADER_FONT,
-  MONOSPACE,
-  GREEN,
-  HR_DEGREES,
-  media,
-} from "./constants";
+@import "~styles/constants";
 
-const styles = `
 html {
   width: 100%;
   height: 100%;
   font-size: 62.5%;
 }
+
 body {
   width: 100%;
   height: 100%;
@@ -23,7 +14,7 @@ body {
   font-weight: 400;
   padding: 0;
   font-size: 1.6rem;
-  font-family: ${SANS_SERIF};
+  font-family: $SANS_SERIF;
 
   > div {
     flex: 1;
@@ -37,20 +28,7 @@ body {
   box-sizing: border-box;
 }
 
-#container {
-  width: 100%;
-
-  & > * {
-    z-index: 0;
-    position: relative;
-
-    &:first-child {
-      z-index: 1;
-    }
-  }
-}
-
-___gatsby {
+#___gatsby {
   flex: 1;
   display: flex;
   max-width: 100%;
@@ -64,8 +42,10 @@ a {
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   line-height: 18px;
   -webkit-text-decoration-skip: objects;
+  transition-duration: 0.15s;
 
-  &:active, &:hover {
+  &:active,
+  &:hover {
     outline-width: 0;
     border-bottom-color: rgba(0, 0, 0, 0.4);
   }
@@ -82,6 +62,17 @@ a {
     }
   }
 
+  &:hover {
+    border-bottom: 1px solid $BLUE;
+  }
+
+  // &.gatsby-resp-image-link {
+  //   border: none;
+
+  //   &:hover {
+  //     border: none;
+  //   }
+  // }
 }
 
 hr {
@@ -99,7 +90,7 @@ hr {
   margin: 45px auto;
   width: 100%;
 
-  &:before {
+  &::before {
     content: '...';
     display: inline-block;
     margin: 20px auto;
@@ -112,29 +103,30 @@ hr {
 
   &.line {
     margin: 100px 0 0 0;
-    ${media.tablet`
-      margin: 20px 0 40px 0;
-    `}
 
-    &:before {
+    @media screen and (max-width: $tablet) {
+      margin: 20px 0 40px 0;
+    }
+
+    &::before {
       display: none;
     }
 
-    &:after {
+    &::after {
       content: "";
       position: absolute;
       width: 24px;
       height: 11px;
-      -webkit-transform: skewY(${HR_DEGREES}deg);
-      transform: skewY(${HR_DEGREES}deg);
+      -webkit-transform: skewY($HR_DEGREES);
+      transform: skewY($HR_DEGREES);
       // position: absolute;
       // top: -85px;
       margin-left: auto;
       margin-right: auto;
       // left: 48%;
       left: calc(50% - 24px);
-      background: -webkit-gradient(linear,left top,left bottom,color-stop(50%,#32325d),color-stop(50%,#fff));
-      background: linear-gradient(#32325d 50%,#fff 0);
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #32325d), color-stop(50%, #fff));
+      background: linear-gradient(#32325d 50%, #fff 0);
       background-size: 100% 4px;
     }
   }
@@ -150,8 +142,7 @@ h3,
 h4,
 h5,
 h6 {
-  letter-spacing: -.015em;
-  font-weight: 700;
+  letter-spacing: -0.015em;
   margin: 0;
   padding: 0;
   font-weight: 600;
@@ -161,50 +152,8 @@ h6 {
   font-family: inherit;
 }
 
-h1 {
-  font-family: ${HEADER_FONT};
-  font-size: 2.5rem;
-  // margin: 80px 0 0 0;
-
-  color: rgba(0,0,0,0.80);
-  padding: 0;
-  text-align: left;
-  display: block;
-  clear: both;
-  padding-bottom: 20px;
-
-  font-size: 3.2rem;
-  line-height: 1.24;
-  letter-spacing: -.015em;
-  margin: 10px 0;
-  font-size: 4.6rem;
-  font-weight: 600;
-  padding: 0;
-
-  .anchor {
-    margin-left: -20px;
-    border: none;
-    padding-right: 0;
-
-    &:hover {
-      border: none;
-    }
-  }
-
-  line-height: auto;
-  a {
-    display: block;
-    padding-bottom: 10px;
-    border: none;
-
-    &:hover {
-      border: none;
-    }
-  }
-}
-
 h2 {
-  font-family: ${HEADER_FONT};
+  font-family: $SERIF;
   margin: 40px 0 10px 0;
   padding: 0;
   font-size: 3.8rem;
@@ -231,6 +180,40 @@ h2 {
   }
 }
 
+h1 {
+  font-family: $SERIF;
+  color: rgba(0, 0, 0, 0.8);
+  text-align: left;
+  display: block;
+  clear: both;
+  letter-spacing: -0.015em;
+  margin: 10px 0;
+  font-size: 4.6rem;
+  font-weight: 600;
+  padding: 0;
+  line-height: auto;
+
+  .anchor {
+    margin-left: -20px;
+    border: none;
+    padding-right: 0;
+
+    &:hover {
+      border: none;
+    }
+  }
+
+  a {
+    display: block;
+    padding-bottom: 10px;
+    border: none;
+
+    &:hover {
+      border: none;
+    }
+  }
+}
+
 
 h3 {
   margin: 40px 0 20px 0;
@@ -252,14 +235,13 @@ h6 {
 
 p, ul, li {
   margin: 5px 0 32px;
-  font-family: ${SANS_SERIF};
-  // font-family: ${SERIF};
+  font-family: $SANS_SERIF;
   font-size: 1.8rem;
   line-height: 3rem;
 }
 
 figcaption, aside, time {
-  font-family: ${SANS_SERIF};
+  font-family: $SANS_SERIF;
 }
 
 li {
@@ -273,7 +255,6 @@ p {
 
 iframe {
   padding: 0;
-  margin: 0 0 40px 0;
   border: none;
   height: 400px;
   width: 100%;
@@ -282,13 +263,8 @@ iframe {
   margin: 30px auto;
 }
 
-ul {
-  li, ol {
-  }
-}
-
 ::selection {
-  background: ${PINK};
+  background: $YELLOW;
 }
 
 .gatsby-resp-image-link {
@@ -296,15 +272,22 @@ ul {
   border: none;
 }
 
+code {
+  background-color: rgba(0, 0, 0, 0.04);
+  padding: 2px 5px;
+  font-size: 120%;
+  white-space: pre-wrap;
+}
+
 pre {
-  font-size: 1.6em;
-  background-color:rgba(0,0,0,.04);
-  border-radius:3px;
-  font-family: ${MONOSPACE};
+  font-size: 1.8rem;
+  background-color: rgba(0, 0, 0, 0.04);
+  border-radius: 3px;
+  font-family: $MONOSPACE;
   overflow-x: scroll;
   margin: 0 0 20px 0;
   padding: 20px;
-  line-height: 1.0;
+  line-height: 1;
 
   code {
     padding: 0;
@@ -313,18 +296,11 @@ pre {
   }
 }
 
-code {
-  background-color:rgba(0,0,0,.04);
-  padding: 2px 5px;
-  font-size: 120%;
-  white-space: pre-wrap;
-}
-
 blockquote {
   display: block;
   text-align: left;
-  font-family: ${SANS_SERIF};
-  font-size: 2.0rem;
+  font-family: $SANS_SERIF;
+  font-size: 2rem;
   border-left: 4px solid rgba(0, 0, 0, 0.25);
   padding: 10px 20px;
   margin: 10px 0 40px 0;
@@ -372,24 +348,3 @@ blockquote {
   }
 }
 
-a {
-  transition-duration: 0.15s;
-
-  &:hover {
-    border-bottom: 1px solid ${GREEN};
-  }
-
-  &.gatsby-resp-image-link {
-    border: none;
-
-    &:hover {
-      border: none;
-    }
-  }
-}
-
-pre {
-  font-size: 1.8rem;
-}
-`
-export default styles;
