--- a/src/components/markdown/Embed/styles.module.scss
+++ b/src/components/markdown/Embed/styles.module.scss
@@ -1,12 +1,12 @@
 .container {
-  display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin: 0 0 60px 0;
 
   iframe {
     height: 100%;
     border: 1px solid transparent;
     border-radius: 4px;
+    margin: 0;
   }
 
   &.border {
