--- a/src/templates/blog-post/simple/styles.module.scss
+++ b/src/templates/blog-post/simple/styles.module.scss
@@ -5,6 +5,7 @@
   position: relative;
   margin: 0 0 80px 0;
   width: 100%;
+  min-height: 170px;
 
   @media screen and (max-width: $tablet) {
     margin-bottom: 80px;
@@ -154,6 +155,13 @@
   @media print {
     height: auto;
     width: 100%;
+  }
+}
+
+.missingCoverImage {
+  .title {
+    margin-top: 100px;
+    position: relative;
   }
 }
 
