--- a/src/templates/blog-post/simple/styles.module.scss
+++ b/src/templates/blog-post/simple/styles.module.scss
@@ -59,6 +59,11 @@
   padding: 5px 10px;
   top: 0;
   right: 0;
+  transition-duration: 0.2s;
+
+  &.bumpedCaption {
+    top: $HEADER_HEIGHT + $HEADER_BORDER;
+  }
 
   @media screen and (max-width: $phone) {
     position: relative;
