--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -20,10 +20,10 @@ a.subscribeButton {
   background: rgba(255, 255, 255, 0.96);
   opacity: 0;
 
-  &:hover {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    opacity: 1;
-  }
+  // &:hover {
+  //   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  //   opacity: 1;
+  // }
 
   &.visible {
     opacity: 1;
