--- a/src/components/markdown/Embed/styles.module.scss
+++ b/src/components/markdown/Embed/styles.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: block;
   justify-content: center;
-  margin: 0 0 40px 0;
+  margin: 0 auto 40px auto;
 
   iframe {
     height: 100%;
