--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,4 +1,4 @@
-$giant: 1170px;
+$giant: 1340px;
 $desktop: 992px;
 $tablet: 820px;
 // $tablet: 768px;
@@ -9,6 +9,7 @@ $headerHeightsTablet: 300px;
 $headerHeightsPhone: 160px;
 
 $contentWidth: 780px;
+$sidebarWidth: 340px;
 
 $SERIF: "sofia-pro", Source Serif Pro, Georgia, serif;
 $SANS_SERIF: -apple-system, BlinkMacSystemFont, Lato, Droid Sans, Helvetica Neue, sans-serif;
