Show and hide header

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -89,10 +89,11 @@ a.closeNewsletter {
   justify-content: flex-end;
   align-items: center;
 
-  @media screen and (max-width: $tablet) {
-    width: 0;
-    padding: 0;
-  }
+  // @media screen and (max-width: $tablet) {
+  //   width: 0;
+  //   padding: 0;
+  //   display: none;
+  // }
 
   a {
     margin-left: 20px;
@@ -199,8 +200,9 @@ a.closeNewsletter {
   }
 
   @media screen and (max-width: $tablet) {
-    justify-content: flex-end;
-    padding-right: 40px;
+    display: none;
+    // justify-content: flex-end;
+    // padding-right: 40px;
   }
 
   @media screen and (max-width: $phone) {
