Update subscribe form to be inline

--- a/src/templates/blog-post/simple/styles.module.scss
+++ b/src/templates/blog-post/simple/styles.module.scss
@@ -107,6 +107,12 @@
     width: $sidebarWidth;
     position: relative;
     margin-left: 40px;
+    transition-duration: 0.5s;
+    opacity: 0;
+
+    &.visible {
+      opacity: 1;
+    }
   }
 
   .sidebar {
