--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -23,7 +23,8 @@ $GREEN: #1c9963;
 $LIGHT_GRAY: rgba(100, 100, 100, 0.2);
 // $GRAY: #10038208;
 $GRAY: rgba(16, 3, 130, 0.03);
-$YELLOW: #fff329b3;
+$YELLOW: #fbf65c;
+// $YELLOW: #fff329b3;
 // $BLUE: #100382bd;
 $BLUE: rgba(16, 3, 130, 0.74);
 $LIGHT_BLUE: $BLUE;
