--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -14,6 +14,7 @@
   background-color: $DARK_BLUE;
   color: rgba(255, 255, 255, 0.95);
   margin-top: 160px;
+  padding-bottom: 40px;
   padding-top: 60px;
 
   @media screen and (max-width: $tablet) {
