--- a/src/components/Form/styles.module.scss
+++ b/src/components/Form/styles.module.scss
@@ -13,16 +13,14 @@
     border-radius: 0;
   }
 
-  &.compact {
-    .inputs {
-      display: flex;
-      margin: 0;
-      border: 1px solid rgba(0, 0, 0, 0.3);
-      border-radius: 4px;
+  .inputs {
+    display: flex;
+    margin: 0;
 
-      .input {
-        flex: 1;
-      }
+.input {
+  flex: 1;
+}
+
 
       .hidden {
         display: none;
@@ -31,6 +29,31 @@
       .submit {
         flex: 0;
       }
+
+      input {
+        width: 100%;
+        margin: 0;
+        font-size: 1.4rem;
+        border-radius: 5px 0 0 5px;
+
+        &[type=submit] {
+          border: 1px solid rgba(0,0,0,.3) !important;
+          border-radius: 0 5px 5px 0;
+          height: 39px;
+          padding: 0 10px;
+          border-left: none !important;
+
+          &:disabled {
+            background: rgba(0, 0, 0, 0.1);
+          }
+        }
+      }
+  }
+
+  &.compact {
+    .inputs {
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 4px;
 
       input {
         width: 100%;
