Remove newsletter and fix header

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -28,6 +28,7 @@ a.subscribeButton {
   &.visible {
     opacity: 1;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 1;
   }
 
   @media print {
