--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,6 +32,12 @@ body {
   flex: 1;
   display: flex;
   max-width: 100%;
+
+  > div {
+    width: 100%;
+    display: flex;
+    flex: 1;
+  }
 }
 
 a {
