--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -30,6 +30,9 @@ $BLUE: rgba(16, 3, 130, 0.74);
 $LIGHT_BLUE: $BLUE;
 $ORIGINAL_BLUE: rgba(45, 67, 104, 0.95);
 $DARK_BLUE: desaturate(darken($ORIGINAL_BLUE, 10%), 10%);
+
+$BOOK_BG: rgb(37, 54, 76);
+$BOOK_HIGHLIGHT: rgb(31, 182, 255);
 // $DARK_BLUE: Color("rgba(45,67,104,0.95)").darken(0.1).desaturate(0.1).string();
 
 $HR_DEGREES: -12deg;
