Add latest style changes

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -40,11 +40,9 @@
     {{ $title = .Site.Title }}
   {{ end }}
   <title>{{ $title }}</title>
-  <link rel="stylesheet" href="https://use.typekit.net/zip7tcb.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Code+Pro&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900" rel="stylesheet">
   <link rel="stylesheet" href="{{ "css/prism-okaidia.css" | absURL }}" media="none" onload="this.media='all';">
+
 
 
 </head>
