--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --SANS-SERIF: Heebo, Oswald, "Noto Sans JP", "sofia-pro", Source Serif Pro, Georgia, serif;
+  --SANS-SERIF: Heebo, Source Serif Pro, Georgia, serif;
   --SERIF: Merriweather, -apple-system, BlinkMacSystemFont, Lato, Droid Sans, Helvetica Neue, sans-serif;
   --MONOSPACE: SFMono-Regular,Consolas,Roboto Mono,Droid Sans Mono,Liberation Mono,Menlo,Courier,monospace;
   --TURQUOISE: rgb(31, 182, 255);
@@ -11,6 +11,8 @@
   --WHITE: rgb(245, 245, 245);
   --WHITE: rgb(247, 250, 255);
   --PURPLE: rgba(45, 67, 104, 0.95);
+  --DARK_BLUE: #043C5E;
+  --PINK: #FB5895;
 }
 
 body {
@@ -38,7 +40,11 @@ a {
   border-bottom: 1px solid var(--BORDER);
   /* line-height: 18px; */
   -webkit-text-decoration-skip: objects;
-  transition-duration: 0.15s;
+  /* transition-duration: 0.15s; */
+}
+
+a:hover {
+  color: var(--PINK);
 }
 
 * {
@@ -67,11 +73,11 @@ h6 {
   color: inherit;
   /* line-height: 1.1; */
   font-family: inherit;
+  color: var(--DARK_BLUE);
 }
 
 h1 {
   font-family: var(--SANS-SERIF);
-  color: rgba(0, 0, 0, 0.8);
   text-align: left;
   display: block;
   clear: both;
@@ -96,6 +102,8 @@ h3 {
   font-size: 1.6rem;
   margin: 50px 0 20px;
 }
+
+
 
 h4 {
   font-family: var(--SANS-SERIF);
@@ -146,6 +154,7 @@ code {
   /* font-size: 120%; */
   white-space: pre-wrap;
   border-radius: 5px;
+  color: var(--PINK);
 }
 
 pre {
@@ -166,6 +175,7 @@ pre code {
   background-color: transparent;
   font-family: inherit;
   /* font-size: 100%; */
+  color: inherit;
 }
 
 pre {
@@ -221,7 +231,7 @@ blockquote {
   }
 
   .patterns-list li p {
-    margin-top: 24px;
+    margin-top: 12px;
     margin-bottom: 0;
   }
 
@@ -229,13 +239,14 @@ blockquote {
     font-size: 2.2rem;
     line-height: 2.2rem;
     margin-bottom: 5px;
-    color: var(--BLUE);
   }
 
-  .patterns-list .read-more {
-    font-size: 0.8rem;
-    text-align: right;
-    color: var(--BLUE);
+  .patterns-list a:hover {
+    color: inherit;
+  }
+
+  .patterns-list h2 a:hover {
+    color: var(--PINK);
   }
 
   #main h1:first-child {
@@ -243,6 +254,10 @@ blockquote {
     margin: 20px 0 10px 0;
     line-height: 3.0rem;
   }
+  #main h1 {
+    margin-top: 80px;
+  }
+
   #main h1.distance {
     padding: 80px 0 120px 0;
   }
@@ -358,7 +373,8 @@ hr:before {
   /* background-color: var(--BACKGROUND); */
   /* color: var(--BORDER); */
   background-color: var(--WHITE);
-  color: var(--BLUE);
+  /* color: var(--BLUE); */
+  color: var(--PINK);
 }
 
 .intro {
@@ -386,6 +402,9 @@ hr:before {
 
 .intro-and-nav .pattern a {
   padding: 0.5em 2.25rem;
+}
+.intro-and-nav .pattern a:hover {
+  color: var(--PINK);
 }
 
 .intro-and-nav .pattern span {
@@ -523,12 +542,6 @@ form#newsletter-contents h2 {
   padding: 0;
 }
 
-form#newsletter-contents h2 small {
-  /* font-size: 90%; */
-  /* opacity: 0.9; */
-}
-
-
 #newsletter-input-container {
   display: flex;
   margin-top: 20px;
@@ -621,10 +634,6 @@ ol, ul {
   line-height: 1.6rem;
 }
 
-code[class*="language-"], pre[class*="language-"] {
-  font-size: 0.9em;
-}
-
 #logo-container {
   width: 100%;
   margin-top: 80px;
@@ -635,4 +644,8 @@ code[class*="language-"], pre[class*="language-"] {
   width: 80px;
   height: 80px;
   float: right;
+}
+
+#main code[class*="language-"], #main pre[class*="language-"] {
+  font-size: 0.9em;
 }
