--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="intro-and-nav" role="banner">
   <div>
     <div id="logo-container">
-  <img src="/logo.png" id="logo" />
+  <img src="/images/logo.png" id="logo" />
     </div>
     <div class="intro">
       Kevin Scott
