--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,16 @@
       {{ partial "header.html" . }}
           {{ block "main" . }}{{ end }}
     </div>
-    {{ partial "script.html" . }}
     {{ partial "google-analytics-async.html" . }}
+    {{ partial "script.html" . }}
+    <script>
+        var links = document.links;
+        for (var i = 0, linksLength = links.length; i < linksLength; i++) {
+          if (links[i].hostname != window.location.hostname) {
+            links[i].target = '_blank';
+            links[i].rel = 'noopener noreferrer';
+          }
+        }
+      </script>
   </body>
 </html>
