--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,12 +12,7 @@
     {{ end }}
   {{ end }}
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/logo.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" href="/images/logo.png">
 
 
   {{ $templateStyles := resources.Get "css/template-styles.css" }}
