--- a/static/css/style.css
+++ b/static/css/style.css
@@ -649,3 +649,11 @@ ol, ul {
 #main code[class*="language-"], #main pre[class*="language-"] {
   font-size: 0.9em;
 }
+
+#cover-img-credit {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgb(255,255,255,0.5);
+  border-radius: 0 0 0 5px;
+}
