Add headshot to newsletter

--- a/layouts/partials/newsletter.html
+++ b/layouts/partials/newsletter.html
@@ -1,6 +1,10 @@
 <div id="newsletter-background">
 <div id="newsletter">
 
+  <div id="newsletter-headhost">
+  <img src="/images/kevinscott-lightning.jpg" />
+
+  </div>
     <p>I've written a book on getting started with Deep Learning in Javascript for Hackers. We focus on real use cases from the ground up, with a focus on the why and the how.</p>
   <form id="newsletter-contents" method="post" action="https://api.convertkit.com/v3/forms/888718/subscribe">
     <h2>Subscribe to get a Sample Chapter of my book,<br />Deep Learning With Javascript.</h2>
