--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,8 @@
   --WHITE: rgb(247, 250, 255);
   --PURPLE: rgba(45, 67, 104, 0.95);
   --DARK_BLUE: #043C5E;
+  --BLUE: #043C5E;
+  --LIGHT_BLUE: #BFDBF7;
   --PINK: #FB5895;
 }
 
