--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,14 +42,6 @@
         </div>
     {{ partial "newsletter.html" . }}
       </div>
-
-
-
-
-
-
-
-
-    {{ partial "script.html" . }}
+  {{ partial "footer.html" . }}
   </body>
 </html>
