--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,9 +15,20 @@
       <span>{{.ReadingTime}} min read</span>
       </div>
     {{ .Content }}
+
 <div class="line"></div>
   </main>
         </div>
     {{ partial "newsletter.html" . }}
       </div>
+      <script>
+        let icon = '<i data-feather="link"></i>';
+let headings = document.getElementsByTagName('h2');
+for (let i = 0; i < headings.length; i++) {
+  let id = headings[i].id;
+  let iconLink = '<a class="header-icon-link" href="#' + id + '">' + icon + '</a> ';
+  let headingWithIconLink = iconLink + headings[i].innerHTML;
+  headings[i].innerHTML = headingWithIconLink;
+}
+      </script>
 {{ end }}
