--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,3 +5,21 @@
     {{ . | markdownify }}
   {{ end }} -->
 <!-- </footer> -->
+
+    {{ partial "google-analytics-async.html" . }}
+    {{ partial "script.html" . }}
+    <script>
+        var links = document.links;
+        for (var i = 0, linksLength = links.length; i < linksLength; i++) {
+          if (links[i].hostname != window.location.hostname) {
+            links[i].target = '_blank';
+            links[i].rel = 'noopener noreferrer';
+          }
+        }
+      </script>
+{{ $featherJs := resources.Get "js/feather.js" | fingerprint }}
+<script src="{{ $featherJs.Permalink }}"></script>
+
+<script>
+  feather.replace()
+</script>
