--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -46,4 +46,7 @@
 <script>
   feather.replace()
 </script>
+{{ range .AlternativeOutputFormats -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+{{ end -}}
 </head>
