Add latest article

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -272,6 +272,7 @@ iframe {
   max-height: 100%;
   max-width: 800px;
   margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 ::selection {
@@ -358,4 +359,3 @@ blockquote {
     }
   }
 }
-
