--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,7 +95,7 @@ h1 {
 h2 {
   font-family: var(--SANS-SERIF);
   font-weight: 800;
-  margin: 40px 0 10px 0;
+  margin: 80px 0 20px 0;
   padding: 0;
   font-size: 2.0rem;
 }
@@ -139,6 +139,7 @@ iframe, embed {
   max-height: 100%;
   max-width: 800px;
   margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 ::selection {
@@ -167,7 +168,7 @@ pre {
   font-family: var(--MONOSPACE);
   overflow-x: scroll;
   font-size: .8rem;
-  margin: 0 0 20px 0;
+  margin: 0 0 40px 0;
   padding: 20px;
   line-height: 1;
 }
@@ -182,6 +183,10 @@ pre code {
 
 pre {
   outline: none !important;
+}
+
+#main code[class*="language-"], #main pre[class*="language-"] {
+  margin-bottom: 40px;
 }
 
 blockquote {
