--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,7 +35,8 @@
     {{ $title = .Site.Title }}
   {{ end }}
   <title>{{ $title }}</title>
-<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=EB+Garamond:wght@600" rel="stylesheet">
+
   <link rel="stylesheet" href="{{ "css/prism-okaidia.css" | absURL }}" media="none" onload="this.media='all';">
 
 
